--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,7 +3,8 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"]
-    }
+    },
+    "types": ["chrome"]
   },
-  "include": ["src"]
+  "include": ["src", "background.js"]
 }
