fix: 대시보드에서 Tailwind CSS 미적용 이슈 해결 및 스타일 주입 방식 개선
#1

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -10,7 +10,11 @@
   "host_permissions": ["<all_urls>"],
   "web_accessible_resources": [
     {
-      "resources": ["figgy-dashboard.js", "injection/dashboard.css"],
+      "resources": [
+        "figgy-dashboard.js",
+        "figgy-dashboard.css",
+        "images/logos/*.png"
+      ],
       "matches": ["<all_urls>"]
     }
   ],
