refactor: Tailwind 제거 및 styled-components 도입
- 기존 Tailwind 사용 시 외부 페이지 스타일과의 우선순위 충돌 문제 발생
- reset 목적의 GlobalStyle 컴포넌트를 정의해 scoped 초기화 적용

#1

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -10,11 +10,7 @@
   "host_permissions": ["<all_urls>"],
   "web_accessible_resources": [
     {
-      "resources": [
-        "figgy-dashboard.js",
-        "figgy-dashboard.css",
-        "images/logos/*.png"
-      ],
+      "resources": ["figgy-dashboard.js", "images/logos/*.png"],
       "matches": ["<all_urls>"]
     }
   ],
