--- a/package.json
+++ b/package.json
@@ -17,12 +17,11 @@
     ]
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.1.11",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.2",
-    "tailwindcss": "^4.1.11",
+    "styled-components": "^6.1.19",
     "zustand": "^5.0.6"
   },
   "devDependencies": {
