fix: 이미지 경로 문제 해결을 위해 content script 구조로 전환
#1

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -21,5 +21,12 @@
   },
   "action": {
     "default_icon": "images/logos/size_16.png"
-  }
+  },
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["figgy-dashboard.js"],
+      "run_at": "document_idle"
+    }
+  ]
 }
