feature: 대시보드 정적 UI 구현

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -10,7 +10,7 @@
   "host_permissions": ["<all_urls>"],
   "web_accessible_resources": [
     {
-      "resources": ["figgy-dashboard.js", "injection/dashboard.css"],
+      "resources": ["figgy-dashboard.js", "images/logos/*.png"],
       "matches": ["<all_urls>"]
     }
   ],
@@ -21,5 +21,12 @@
   },
   "action": {
     "default_icon": "images/logos/size_16.png"
-  }
+  },
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["figgy-dashboard.js"],
+      "run_at": "document_idle"
+    }
+  ]
 }
